unecessary roles removed

--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
     <div class="row">
         <!-- product section -->
         <div class="col-md-4 col-sm-12">
-            <form role="productCriteria">
+            <form>
                 <div class="form-group">
                     <label>Product</label>
                 </div>
@@ -245,7 +245,7 @@
 
         <!-- price section -->
         <div class="col-md-4 col-sm-6">
-            <form role="priceCriteria">
+            <form>
                 <div class="form-group">
                     <label>Current Price</label>
                 </div>
@@ -269,7 +269,7 @@
 
         <!-- auction section -->
         <div class="col-md-4 col-sm-6">
-            <form role="auctionCriteria">
+            <form>
                 <div class="form-group">
                     <label for="datepicker">Max Auction Close Date</label>
                 </div>
